Fixing broken ipnyb

--- a/Data dimensionality and chance patterns.ipynb
+++ b/Data dimensionality and chance patterns.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "We find that the proportion of significant features over many tests tends towards the alpha level of significance we are using; i.e., ~5% (1/20 or 0.05) of features will randomly contain a \"signal\" at the typical alpha level of significance ($p$ = 0.05), or, more elegantly, the proportion of significant features ($P$) of the total number of features equals the alpha level of significance ($\\alpha$):\n",
     "\n",
-    "$$P \approx \\alpha$$\n",
+    "$$P = \\alpha$$\n",
     "\n",
     "The number of likely significant features ($F_{s}$) of the total number of features ($F$) is approximately:\n",
     "\n",
