--- a/Data dimensionality and chance patterns.ipynb
+++ b/Data dimensionality and chance patterns.ipynb
@@ -13,25 +13,27 @@
    "source": [
     "In this notebook we will explore the potential for patterns to arise by chance in data as we increase the number of features in a dataset. We create what is essentially a null model by randomly generating a dataset and performing some significance tests (a <i>t</i>-test in this case) on the features to assess what chance can achieve in terms of significant differences between randomly assigned classes.\n",
     "\n",
-    "We find that the proportion of significant features over many tests tends towards the alpha level of significance we are using; i.e., ~5% (1/20 or 0.05) of features will randomly contain a \"signal\" at the typical alpha level of significance ($p$ = 0.05), or, more elegantly, the proportion of significant features ($P$) of the total number of features equals the alpha level of significance ($\\alpha$):\n",
+    "We find that the proportion of significant features over many tests tends towards the alpha level of significance we are using; i.e., ~5% (1/20 or 0.05) of features will randomly contain a \"signal\" at the typical alpha level of significance ($p$ = 0.05), or, more elegantly, the proportion of significant features ($P$) will approximately equal the alpha level of significance ($\\alpha$):\n",
     "\n",
-    "$$P = \\alpha$$\n",
+    "$$P \\approx \\alpha$$\n",
     "\n",
     "The number of likely significant features ($F_{s}$) of the total number of features ($F$) is approximately:\n",
     "\n",
-    "$$F_{s} = F \\cdot \\alpha$$\n",
+    "$$F_{s} \\approx F \\cdot \\alpha$$\n",
     "\n",
     "If we have a dataset containing 20 features, 1 would be expected to test as significant by chance with an $\\alpha$ of 0.05: \n",
     "\n",
-    "$$F_{s} = F \\cdot \\alpha = 20 \\cdot 0.05 = 1$$\n",
+    "$$F_{s} \\approx F \\cdot \\alpha \\approx 20 \\cdot 0.05 \\approx 1$$\n",
     "\n",
     "However, spectral datasets typically contain hundreds or thousands of features. For instance, a typical fingerprint region of an FTIR dataset contains ~400 features. Using an alpha level of significance of approximately 0.05, we might expect that:\n",
     "\n",
-    "$$F_{s} = F \\cdot \\alpha = 400 \\cdot 0.05 = 20$$\n",
+    "$$F_{s} \\approx F \\cdot \\alpha \\approx 400 \\cdot 0.05 \\approx 20$$\n",
     "\n",
-    "20 features may test as significant by chance.\n",
+    "We would expect around 20 features to test as significant by chance in a dataset generated at random.\n",
     "\n",
-    "This is demostrated in the following code. Given this potential, it is important to consider whether machine learning algorithms are finding genuine, useful patterns in data because as we increase the dimensionality of our data (the number of features), we increase the potential for algorithms to find chance patterns. Ultimately we may be fooled into thinking that we have found genuine, predictable differences between our samples."
+    "Obviously we are not dealing with random datasets and may not be using algorithms that use stistical tests, but given this potential, it is important to consider whether machine learning algorithms are finding genuine, useful patterns in our data. As we increase the dimensionality of our data (the number of features), we increase the potential for algorithms to find chance patterns. Ultimately we may be fooled into thinking that we have found genuine, predictable differences between our samples.\n",
+    "\n",
+    "This is demostrated in the following code."
    ]
   },
   {
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,64 +233,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th scope=col>X59</th><th scope=col>X941</th><th scope=col>X183</th><th scope=col>X215</th><th scope=col>group</th></tr></thead>\n",
+       "<thead><tr><th scope=col>X640</th><th scope=col>X357</th><th scope=col>X270</th><th scope=col>X344</th><th scope=col>group</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>0.8931902   </td><td>0.70882586  </td><td>0.9823403461</td><td>0.17824324  </td><td>a           </td></tr>\n",
-       "\t<tr><td>0.9500228   </td><td>0.43068695  </td><td>0.5122523878</td><td>0.07181787  </td><td>a           </td></tr>\n",
-       "\t<tr><td>0.7391530   </td><td>0.40384400  </td><td>0.0005237537</td><td>0.25888528  </td><td>a           </td></tr>\n",
-       "\t<tr><td>0.6889495   </td><td>0.01261479  </td><td>0.9112691120</td><td>0.95739781  </td><td>a           </td></tr>\n",
-       "\t<tr><td>0.7287171   </td><td>0.29628283  </td><td>0.4031528893</td><td>0.17877259  </td><td>b           </td></tr>\n",
-       "\t<tr><td>0.6039772   </td><td>0.78171662  </td><td>0.0655915937</td><td>0.21866393  </td><td>b           </td></tr>\n",
-       "\t<tr><td>0.4640840   </td><td>0.29012794  </td><td>0.9081497837</td><td>0.90662285  </td><td>b           </td></tr>\n",
-       "\t<tr><td>0.1467098   </td><td>0.89873815  </td><td>0.1047934261</td><td>0.54316011  </td><td>b           </td></tr>\n",
+       "\t<tr><td>0.5092121  </td><td>0.6367386  </td><td>0.533841306</td><td>0.2125490  </td><td>a          </td></tr>\n",
+       "\t<tr><td>0.8836365  </td><td>0.6319032  </td><td>0.842421261</td><td>0.9788919  </td><td>a          </td></tr>\n",
+       "\t<tr><td>0.8673495  </td><td>0.8564405  </td><td>0.397368154</td><td>0.4423872  </td><td>a          </td></tr>\n",
+       "\t<tr><td>0.3297506  </td><td>0.2105013  </td><td>0.248513736</td><td>0.4088075  </td><td>a          </td></tr>\n",
+       "\t<tr><td>0.5466924  </td><td>0.5545766  </td><td>0.003384446</td><td>0.8061705  </td><td>b          </td></tr>\n",
+       "\t<tr><td>0.3942478  </td><td>0.8652014  </td><td>0.076989455</td><td>0.3114040  </td><td>b          </td></tr>\n",
+       "\t<tr><td>0.3160072  </td><td>0.7299043  </td><td>0.395396335</td><td>0.6980330  </td><td>b          </td></tr>\n",
+       "\t<tr><td>0.2506160  </td><td>0.1545684  </td><td>0.472955128</td><td>0.1678732  </td><td>b          </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "\\begin{tabular}{r|lllll}\n",
-       " X59 & X941 & X183 & X215 & group\\\\\n",
+       " X640 & X357 & X270 & X344 & group\\\\\n",
        "\\hline\n",
-       "\t 0.8931902    & 0.70882586   & 0.9823403461 & 0.17824324   & a           \\\\\n",
-       "\t 0.9500228    & 0.43068695   & 0.5122523878 & 0.07181787   & a           \\\\\n",
-       "\t 0.7391530    & 0.40384400   & 0.0005237537 & 0.25888528   & a           \\\\\n",
-       "\t 0.6889495    & 0.01261479   & 0.9112691120 & 0.95739781   & a           \\\\\n",
-       "\t 0.7287171    & 0.29628283   & 0.4031528893 & 0.17877259   & b           \\\\\n",
-       "\t 0.6039772    & 0.78171662   & 0.0655915937 & 0.21866393   & b           \\\\\n",
-       "\t 0.4640840    & 0.29012794   & 0.9081497837 & 0.90662285   & b           \\\\\n",
-       "\t 0.1467098    & 0.89873815   & 0.1047934261 & 0.54316011   & b           \\\\\n",
+       "\t 0.5092121   & 0.6367386   & 0.533841306 & 0.2125490   & a          \\\\\n",
+       "\t 0.8836365   & 0.6319032   & 0.842421261 & 0.9788919   & a          \\\\\n",
+       "\t 0.8673495   & 0.8564405   & 0.397368154 & 0.4423872   & a          \\\\\n",
+       "\t 0.3297506   & 0.2105013   & 0.248513736 & 0.4088075   & a          \\\\\n",
+       "\t 0.5466924   & 0.5545766   & 0.003384446 & 0.8061705   & b          \\\\\n",
+       "\t 0.3942478   & 0.8652014   & 0.076989455 & 0.3114040   & b          \\\\\n",
+       "\t 0.3160072   & 0.7299043   & 0.395396335 & 0.6980330   & b          \\\\\n",
+       "\t 0.2506160   & 0.1545684   & 0.472955128 & 0.1678732   & b          \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| X59 | X941 | X183 | X215 | group |\n",
+       "| X640 | X357 | X270 | X344 | group |\n",
        "|---|---|---|---|---|\n",
-       "| 0.8931902    | 0.70882586   | 0.9823403461 | 0.17824324   | a            |\n",
-       "| 0.9500228    | 0.43068695   | 0.5122523878 | 0.07181787   | a            |\n",
-       "| 0.7391530    | 0.40384400   | 0.0005237537 | 0.25888528   | a            |\n",
-       "| 0.6889495    | 0.01261479   | 0.9112691120 | 0.95739781   | a            |\n",
-       "| 0.7287171    | 0.29628283   | 0.4031528893 | 0.17877259   | b            |\n",
-       "| 0.6039772    | 0.78171662   | 0.0655915937 | 0.21866393   | b            |\n",
-       "| 0.4640840    | 0.29012794   | 0.9081497837 | 0.90662285   | b            |\n",
-       "| 0.1467098    | 0.89873815   | 0.1047934261 | 0.54316011   | b            |\n",
+       "| 0.5092121   | 0.6367386   | 0.533841306 | 0.2125490   | a           |\n",
+       "| 0.8836365   | 0.6319032   | 0.842421261 | 0.9788919   | a           |\n",
+       "| 0.8673495   | 0.8564405   | 0.397368154 | 0.4423872   | a           |\n",
+       "| 0.3297506   | 0.2105013   | 0.248513736 | 0.4088075   | a           |\n",
+       "| 0.5466924   | 0.5545766   | 0.003384446 | 0.8061705   | b           |\n",
+       "| 0.3942478   | 0.8652014   | 0.076989455 | 0.3114040   | b           |\n",
+       "| 0.3160072   | 0.7299043   | 0.395396335 | 0.6980330   | b           |\n",
+       "| 0.2506160   | 0.1545684   | 0.472955128 | 0.1678732   | b           |\n",
        "\n"
       ],
       "text/plain": [
-       "  X59       X941       X183         X215       group\n",
-       "1 0.8931902 0.70882586 0.9823403461 0.17824324 a    \n",
-       "2 0.9500228 0.43068695 0.5122523878 0.07181787 a    \n",
-       "3 0.7391530 0.40384400 0.0005237537 0.25888528 a    \n",
-       "4 0.6889495 0.01261479 0.9112691120 0.95739781 a    \n",
-       "5 0.7287171 0.29628283 0.4031528893 0.17877259 b    \n",
-       "6 0.6039772 0.78171662 0.0655915937 0.21866393 b    \n",
-       "7 0.4640840 0.29012794 0.9081497837 0.90662285 b    \n",
-       "8 0.1467098 0.89873815 0.1047934261 0.54316011 b    "
+       "  X640      X357      X270        X344      group\n",
+       "1 0.5092121 0.6367386 0.533841306 0.2125490 a    \n",
+       "2 0.8836365 0.6319032 0.842421261 0.9788919 a    \n",
+       "3 0.8673495 0.8564405 0.397368154 0.4423872 a    \n",
+       "4 0.3297506 0.2105013 0.248513736 0.4088075 a    \n",
+       "5 0.5466924 0.5545766 0.003384446 0.8061705 b    \n",
+       "6 0.3942478 0.8652014 0.076989455 0.3114040 b    \n",
+       "7 0.3160072 0.7299043 0.395396335 0.6980330 b    \n",
+       "8 0.2506160 0.1545684 0.472955128 0.1678732 b    "
       ]
      },
      "metadata": {},
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
