--- a/X2 - Potential pitfalls of feature selection with high-dimensional data.ipynb
+++ b/X2 - Potential pitfalls of feature selection with high-dimensional data.ipynb
@@ -58,6 +58,7 @@
     "  } else {\n",
     "    tth_split <- list(df)\n",
     "  }\n",
+    "  train_prop <- 1 - test_prop - holdout_prop\n",
     "  tth_data <- lapply(tth_split, function(df){\n",
     "    df$.TTH <- sample(c(\"train\", \"test\", \"holdout\"), nrow(df), replace = T, prob = c(train_prop, test_prop, holdout_prop))\n",
     "    df\n",
